# mascot-rs

./: .gitignore  Cargo.toml  Data distribution study.ipynb  README.md  data_distribution_tests.csv  data_distribution_tests.py
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: random_documents.rs
src/: annotated_ms2.rs  charge.rs  dataset.rs  error.rs  fragmentation_spectra_level.rs  gems_a10.rs  gnps.rs  gnps_spectrum_id.rs  ionmode.rs  lib.rs  line_parser.rs  mascot_generic_format.rs  mascot_generic_format_builder.rs  mascot_generic_format_data.rs  mascot_generic_format_data_builder.rs  mascot_generic_format_metadata.rs  mascot_generic_format_metadata_builder.rs  mass_spec_gym.rs  merge_scans_metadata.rs  merge_scans_metadata_builder.rs  nan.rs  numeric.rs  pubmed_id.rs  strictly_positive.rs  trait_zero.rs  zero.rs
tests/: error_hashmap_counter.json  error_log.txt  retrieve_data.py  test_charge_parsing.rs  test_mgf_header_normalization.rs  test_mgf_structured_header_validation.rs  test_mgf_vec_collection.rs  test_read_mgf_documents.rs  test_read_valid_mgf_documents.rs
tests/data/: 20220513_PMA_DBGI_01_04_001.mgf  20220513_PMA_DBGI_01_04_001.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_002.mgf  20220513_PMA_DBGI_01_04_002.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_003.mgf  20220513_PMA_DBGI_01_04_003.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_004.mgf  20220513_PMA_DBGI_01_04_004.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_005.mgf  20220513_PMA_DBGI_01_04_005.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_006.mgf  20220513_PMA_DBGI_01_04_006.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_007.mgf  20220513_PMA_DBGI_01_04_007.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_008.mgf  20220513_PMA_DBGI_01_04_008.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_009.mgf  20220513_PMA_DBGI_01_04_009.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  20220513_PMA_DBGI_01_04_010.mgf  20220513_PMA_DBGI_01_04_010.mzML_chromatograms_deconvoluted_deisotoped_filtered_enpkg_sirius.mgf  mapp_batch_000052.mgf  mapp_batch_00059.mgf  mapp_batch_00059_sirius.mgf
