[package]
name = "mascot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]
description = "A library to read mascot spectra files"
homepage = "https://github.com/LucaCappelletti94/mascot-rs"
repository = "https://github.com/LucaCappelletti94/mascot-rs"
readme = "README.md"
license = "MIT"
keywords = ["mascot", "format", "spectrography"]
categories = [
    "science",
]

[dependencies]
console = "=0.15.8"
indicatif = { version = "0.17", default-features = false }
mass_spectrometry = { git = "https://github.com/earth-metabolome-initiative/mass-spectrometry-traits", rev = "a277e6e0b6becb88312d895ce61ee45d4c4a1378", features = ["mem_dbg"] }
mem_dbg = "0.4"
thiserror = "2.0"
ureq = "3.3"

[dev-dependencies]
pollster = "0.4"

[lints.rust]
missing_docs = "deny"
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
