[package]
name = "mascot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]
description = "A library to read mascot spectra files"
homepage = "https://github.com/LucaCappelletti94/mascot-rs"
repository = "https://github.com/LucaCappelletti94/mascot-rs"
readme = "README.md"
license = "MIT"
keywords = ["mascot", "format", "spectrography"]
categories = [
    "science",
]

[dependencies]
console = { version = "=0.15.8", optional = true }
indicatif = { version = "0.17", default-features = false, optional = true }
mass_spectrometry = { git = "https://github.com/earth-metabolome-initiative/mass-spectrometry-traits", rev = "a277e6e0b6becb88312d895ce61ee45d4c4a1378", default-features = false }
mem_dbg = { version = "0.4", default-features = false, features = ["derive", "half"], optional = true }
thiserror = { version = "2.0", default-features = false }
ureq = { version = "3.3", optional = true }

[dev-dependencies]
pollster = "0.4"

[features]
default = ["std", "mem_dbg"]
std = [
    "dep:console",
    "dep:indicatif",
    "dep:ureq",
    "mass_spectrometry/std",
    "mem_dbg?/std",
    "thiserror/std",
]
mem_size = [
    "dep:mem_dbg",
    "mass_spectrometry/mem_size",
]
mem_dbg = [
    "std",
    "mem_size",
    "mass_spectrometry/mem_dbg",
]

[lints.rust]
missing_docs = "deny"
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
